refactor(series-comparison): move semantic signals to api
